# InvestmentsApp.Backend/Models/InvestmentsAppContext.cs
@@ -7,13 +7,13 @@ namespace InvestmentsApp.Backend.Models
         public InvestmentsAppContext(DbContextOptions<InvestmentsAppContext> options)
             : base(options) { }
 
-        public DbSet<Investmetn> Investmetns { get; set; }
+        public DbSet<Investment> Investments { get; set; }
         public DbSet<TypeInvestment> TypeInvestments { get; set; }
 
         protected override void OnModelCreating(ModelBuilder modelBuilder)
         {
-            modelBuilder.Entity<Investmetn>()
-                .HasIndex(i => i.Tikcker);
+            modelBuilder.Entity<Investment>()
+                .HasIndex(i => i.Ticker);
 
         }
     }
